--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body{
 }
 .container{
     margin: 0 auto;
-    width: 96%;
+    max-width: 96%;
 }
 
 .header{
@@ -36,6 +36,7 @@ body{
 }
 
 .main{
+    width: 100%;
     margin-top: 5%;
 }
 
@@ -58,4 +59,20 @@ body{
     border-radius: 25px;
     background-color: #32D74B;
     
+}
+
+.items{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.items div{
+    width: 47%;
+}
+.item img{
+    width: 100%;
+    margin-bottom: 5%;
+    border-radius: 15%;
+    background: url(../img/photo__1.jpg);
 }
